# Texconv-Custom-DLL

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_Alpine  Dockerfile_Ubuntu  README.md  THIRD_PARTY_LICENSES.txt  build.cmd  changelog.txt  generates  options.cmake
.github/workflows/: build_all.yml  build_mac.yml  build_ubuntu.yml  build_windows.yml  main.yml  test.yml
TexconvDLL/: CmdLineHelpers.h  DirectXTexCOmpressGPU.cpp  DirectXTexConvert.cpp  DirectXTexConvert_Custom.cpp  DirectXTexDDS.cpp  DirectXTexDDS_Custom.cpp  DirectXTexImage.cpp  DirectXTexImage_Custom.cpp  DirectXTexMipmaps_Custom.cpp  DirectXTexMisc_Custom.cpp  DirectXTexResize_Custom.cpp  DirectXTexUtil.cpp  TexconvDLL.cpp  TexconvDLL.rc  config.h.in  texassemble.cpp  texconv.cpp  texconv.rc  tool_util.cpp  tool_util.h
batch_files/: README.md  build.bat  build_2d_full_support.bat  build_as_exe.bat  build_dds_2d_full_support.bat  build_dds_full_support.bat  build_minimal.bat  build_small.bat  build_texassemble.bat  build_wic_support.bat  build_without_vcruntime.bat  test.bat
cmake/: options.cmake
cmake/override/: FindJPEG.cmake  FindPNG.cmake  directx-headers-config.cmake  directxmath-config.cmake
docs/: Build-on-Unix.md  Build-on-Windows.md  CMake-Options.md  README.md  Usage.md
scripts/: build.bat  build.sh  check_glibc_compatibility.sh
shell_scripts/: README.md  build.sh  build_2d_full_support.sh  build_as_exe.sh  build_as_exe_with_jpg_png.sh  build_dds_full_support.sh  build_minimal.sh  build_on_mac.sh  build_on_ubuntu.sh  build_small.sh  build_texassemble.sh  build_universal.sh  build_with_jpg_png.sh  get_sal.sh  test.sh
tests/: CMakeLists.txt  test_non_dds.cpp  texconv.h
unix_external/: CMakeLists.txt
unix_headers/: CMakeLists.txt
unix_headers/mac_system/: malloc.h
